# events_shaping_controller

./: .gitmodules  README.md
events_shaping_controller_control/: CMakeLists.txt  events_shaping_controller_controllers_plugin.xml  package.xml
events_shaping_controller_control/cfg/: all_config_approach_exp1.yaml  all_config_approach_exp2.yaml  all_config_optm_wy_acmax_constant.yaml  all_config_optm_wy_acmax_sine.yaml  all_config_optm_wy_both_constant.yaml  all_config_optm_wy_both_sine.yaml  all_config_optm_wy_both_sine_roi.yaml  all_config_optm_wy_centroid_constant.yaml  all_config_optm_wy_centroid_sine.yaml  all_config_sweep.yaml  bounding_box_publisher_config.yaml  controllers_config.yaml  derivative_calculator.yaml  franka_control_node.yaml  home_pose.yaml  home_pose_up.yaml  home_pose_up2.yaml  start_pose.yaml
events_shaping_controller_control/include/events_shaping_controller_control/: events_shaping_controller_cartesian_velocity_controller.hpp  events_shaping_controller_task_priority_joint_velocity_controller.hpp
events_shaping_controller_control/launch/: all_approach_commad_constrained.launch  all_distance_sweep.launch  all_omega_optm.launch  all_omega_optm_regular_objects.launch  all_optm_wy_roi.launch  all_optmization_distance.launch  aruco_detector.launch  controllers.launch  derivative_calculator.launch  events_centroid.launch  franka_control.launch  hardcoded_constrained_approach_motion.launch  move_to_start.launch  move_to_start_up.launch  publish_image_with_bounding_box.launch  setup.machine
events_shaping_controller_control/nodes/: approach_command_simulator.py  aruco_marker_detector.py  checker_board_detector.py  command_approach_constraint_divergence.py  command_approach_hardcoded_constraint.py  command_gaze_lock_IAE.py  command_gaze_lock_constrained_fixed_d.py  command_gaze_lock_optm.py  command_gaze_lock_sweep.py  command_heuristic.py  divergence_optimization.py  event_based_optical_flow.py  events_buffering.py  events_centroid.py  events_centroid_tracking.py  iwe_derivative_calculator.py  nodes_synchronization.py  publish_image_with_bounding_box.py  radial_distortion_filter.py  smooth_trajectory_generator.py
events_shaping_controller_control/src/: events_shaping_controller_cartesian_velocity_controller.cpp  events_shaping_controller_task_priority_joint_velocity_controller.cpp
events_shaping_controller_franka_description/: CMakeLists.txt  README.md  package.xml
events_shaping_controller_franka_description/robots/: panda_arm.urdf.xacro
events_shaping_controller_msgs/: CMakeLists.txt  package.xml
events_shaping_controller_msgs/msg/: ImgAccumulatedEventsDistance.msg  OpticalFlowEstimation.msg  StampedEventPacket.msg  Vector2Stamped.msg
