<?xml version="1.0"?>
<package format="2">
    <name>events_shaping_controller_control</name>
    <version>0.4.0</version>
    <description>TODO</description>
    <author>Juan Antonio Gomez Daza/ Aravind Batteje (controllers)</author>
    <maintainer email="juan.a.gomezdaza@campus.tu-berlin.de">Juan Antonio Gomez Daza</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>eigen</build_depend>

    <depend>controller_interface</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>eigen_conversions</depend>
    <depend>franka_hw</depend>
    <depend>franka_gripper</depend>
    <depend>events_shaping_controller_msgs</depend>
    <depend>dvs_msgs</depend>
    <depend>hardware_interface</depend>
    <depend>tf</depend>
    <depend>tf_conversions</depend>
    <depend>libfranka</depend>
    <depend>pluginlib</depend>
    <depend>realtime_tools</depend>
    <depend>roscpp</depend>

    <exec_depend>franka_control</exec_depend>
    <exec_depend>franka_description</exec_depend>
    <exec_depend>panda_moveit_config</exec_depend>
    <exec_depend>rospy</exec_depend>

    <export>
        <controller_interface plugin="${prefix}/events_shaping_controller_controllers_plugin.xml"/>
    </export>

</package>
