<?xml version="1.0"?>
<package format="2">
    <name>events_shaping_controller_franka_description</name>
    <version>0.1.0</version>
    <description>TODO</description>
    <author>Juan Antonio Gomez Daza</author>
    <maintainer email="juan.a.gomezdaza@campus.tu-berlin.de">Juan Antonio Gomez Daza</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <exec_depend>xacro</exec_depend>
</package>
