<?xml version="1.0"?>
<package format="2">
    <name>events_shaping_controller_msgs</name>
    <version>0.1.0</version>
    <description>TODO</description>
    <author>Juan Antonio Gomez Daza</author>
    <maintainer email="juan.a.gomezdaza@campus.tu-berlin.de">Juan Antonio Gomez</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>message_generation</build_depend>

    <depend>std_msgs</depend>

    <exec_depend>message_runtime</exec_depend>

    <build_export_depend>message_runtime</build_export_depend>

    <export>
      <architecture_independent/>
    </export>
</package>
